--- a/ekasivu/cv.html
+++ b/ekasivu/cv.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
+    <link rel="stylesheet" href="tyylit.css">
 </head>
 <body>
     <img src="images/vuoret.jpg" alt="Kuva vuorista">
     <h1>CV</h1>
     <!-- ul un-ordered list, ol ordered list -->
+    
     <ul>
         <li>HTML</li>
         <li>CSS</li>
