--- a/ekasivu/yhteydenottolomake.html
+++ b/ekasivu/yhteydenottolomake.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yhteydenottolomake</title>
+    <link rel="stylesheet" href="tyylit.css">
 </head>
 <body>
     <h1>Ota yhteyttä</h1>
