--- a/site1/etusivu.html
+++ b/site1/etusivu.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        <img src="" alt="Lomamatkat-logo">
+        <img src="images/lomamatkat.png" alt="Lomamatkat-logo">
         <ul>
             <li>Etusivu</li>
             <li>Matkakohteet</li>
@@ -17,7 +17,7 @@
     </header>
 
     <article>
-        <img src="" alt="">
+        <img src="images/kreikka.jpg" alt="Kreikkalainen kylä">
         <h1>Kreikka</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
             Vestibulum feugiat ac ligula ut vestibulum. Sed non efficitur 
