Kuvien tyylit lisätty

--- a/site1/etusivu.html
+++ b/site1/etusivu.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lomamatkat Oy</title>
+    <link rel="stylesheet" href="tyylit.css">
 </head>
 <body>
 
+<div class="container">
+
     <header>
-        <img src="images/lomamatkat.png" alt="Lomamatkat-logo">
+        <img src="images/lomamatkat.png" alt="Lomamatkat-logo" class="logo">
         <ul>
             <li>Etusivu</li>
             <li>Matkakohteet</li>
@@ -29,6 +32,8 @@
     <footer>
         &copy; Lomamatkat Oy 2026
     </footer>
+
+</div> <!-- container -->
 
 </body>
 </html>
