--- a/site1/etusivu.html
+++ b/site1/etusivu.html
@@ -12,28 +12,34 @@
 
     <header>
         <img src="images/lomamatkat.png" alt="Lomamatkat-logo" class="logo">
-        <ul>
-            <li>Etusivu</li>
-            <li>Matkakohteet</li>
-            <li>Yhteystiedot</li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#">Etusivu</a></li>
+                <li><a href="#">Matkakohteet</a></li>
+                <li><a href="yhteystiedot.html">Yhteystiedot</a></li>
+            </ul>
+        </nav>
     </header>
 
     <article>
         <img src="images/kreikka.jpg" alt="Kreikkalainen kylä">
-        <h1>Kreikka</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Vestibulum feugiat ac ligula ut vestibulum. Sed non efficitur 
-            dolor. Donec venenatis turpis eu orci venenatis aliquet. Sed 
-            eu ex tortor. Etiam aliquam hendrerit odio ac feugiat. 
-            Maecenas at convallis ligula. In at eros augue.</p>
+        <div class="text-content">
+            <h1>Kreikka</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Vestibulum feugiat ac ligula ut vestibulum. Sed non efficitur 
+                dolor. Donec venenatis turpis eu orci venenatis aliquet. Sed 
+                eu ex tortor. Etiam aliquam hendrerit odio ac feugiat. 
+                Maecenas at convallis ligula. In at eros augue.</p>
+        </div>
     </article>
+
+</div> <!-- container -->
 
     <footer>
         &copy; Lomamatkat Oy 2026
     </footer>
 
-</div> <!-- container -->
+
 
 </body>
 </html>
