Flex-esimerkki footerissa

--- a/mobile-website-media-queries/index.html
+++ b/mobile-website-media-queries/index.html
@@ -15,7 +15,23 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias a facere, beatae ex quaerat dignissimos laborum impedit magni ipsam velit, officia corrupti, non explicabo voluptates assumenda omnis iure laudantium doloribus?</p>
         <p>Dolor sit amet consectetur adipisicing elit. Sequi, sapiente ad? Voluptates hic commodi aspernatur consequatur, deserunt vero! Quis qui beatae, natus maxime adipisci unde quaerat tempora fuga omnis veniam?</p>
         <p>Itaque, sapiente doloremque ducimus molestiae hic dolorum pariatur illum odit praesentium atque rem ipsum vel incidunt? Doloremque, officia! Iusto, quos? Dolores, facilis. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-    </div> <!-- .wrapper -->
+        <p>Dolor sit amet consectetur adipisicing elit. Sequi, sapiente ad? Voluptates hic commodi aspernatur consequatur, deserunt vero! Quis qui beatae, natus maxime adipisci unde quaerat tempora fuga omnis veniam?</p>
+        <p>Itaque, sapiente doloremque ducimus molestiae hic dolorum pariatur illum odit praesentium atque rem ipsum vel incidunt? Doloremque, officia! Iusto, quos? Dolores, facilis. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+
+
+    <footer>
+        <div class="footer-left">
+            Firma Oy<br>
+            Firmakatu 13<br>
+            13100 Hämeenlinna
+        </div>
+        <div class="footer-right">
+            <p>Instagram</p>
+            <p>Facebook</p>
+        </div>
+    </footer>
+
+</div> <!-- .wrapper -->
 
 </body>
 </html>
