--- a/mobile-website-media-queries/index.html
+++ b/mobile-website-media-queries/index.html
@@ -24,6 +24,9 @@
             Firma Oy<br>
             Firmakatu 13<br>
             13100 Hämeenlinna
+            <p>
+                <a href="tel:+358505556666">050 555 6666</a>
+            </p>
         </div>
         <div class="footer-right">
             <p>Instagram</p>
