--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -17,10 +17,10 @@
         </header>
         <article>
             <h1>Otsikko</h1>
-            <p></p>
+            <p>Sed at risus vel nulla consequat fermentum. Donec et orci mauris. Nullam tempor velit id mi luctus, a scelerisque libero accumsan. In hac habitasse platea dictumst. Cras ac nunc nec massa tristique fringilla.</p>
         </article>
         <div>
-            <img src="" alt="">
+            <img src="images/kukka.jpg" alt="">
         </div>
     </div>
 
