--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -8,20 +8,22 @@
   </head>
   <body>
     
-    <div class="wrapper">
+    <div class="container">
         <header>
             <div>LOGO</div>
             <nav>
                 Etusivu Tuotteet Yhteystiedot
             </nav>
         </header>
-        <article>
-            <h1>Otsikko</h1>
-            <p>Sed at risus vel nulla consequat fermentum. Donec et orci mauris. Nullam tempor velit id mi luctus, a scelerisque libero accumsan. In hac habitasse platea dictumst. Cras ac nunc nec massa tristique fringilla.</p>
-        </article>
-        <div>
-            <img src="images/kukka.jpg" alt="">
-        </div>
+        <main class="row">
+            <article class="col-md-8">
+                <h1>Otsikko</h1>
+                <p>Sed at risus vel nulla consequat fermentum. Donec et orci mauris. Nullam tempor velit id mi luctus, a scelerisque libero accumsan. In hac habitasse platea dictumst. Cras ac nunc nec massa tristique fringilla.</p>
+            </article>
+            <div class="col-md-4">
+                <img src="images/kukka.jpg" alt="" class="img-fluid">
+            </div>
+        </main>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
